crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan-9.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
expression: "<a b=\"\" />"

---
- StartTag:
    name: a
    attributes:
      - name: b
        value:
          content: ""
          location:
            start: "Pos: 5, Ln: 1, Col: 6"
            end: "Pos: 8, Ln: 1, Col: 9"
        name_loc:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 4, Ln: 1, Col: 5"
        location:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 8, Ln: 1, Col: 9"
    self_closing: true

